--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Blockchain Academy: How to Build Your Own Blockchain",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain.git"
+    "url":
+      "git+https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain.git"
   },
   "author": "Leonid Beder",
   "license": "MIT",
-  "homepage": "https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain#readme",
+  "homepage":
+    "https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +30,7 @@
     "express": "^4.16.2",
     "js-sha256": "^0.9.0",
     "minimist": "^1.2.0",
+    "openpgp": "2.6.1",
     "serializer.ts": "0.0.12",
     "typescript-collections": "^1.2.5",
     "uuid": "^3.1.0"
