--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "Blockchain Academy: How to Build Your Own Blockchain",
   "repository": {
     "type": "git",
-    "url":
-      "git+https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain.git"
+    "url": "git+https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain.git"
   },
   "author": "Leonid Beder",
   "license": "MIT",
-  "homepage":
-    "https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain#readme",
+  "homepage": "https://github.com/lbeder/blockchain-academy-how-build-your-own-blockchain#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
