--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "deep-equal": "^1.0.1",
     "express": "^4.16.2",
+    "ipfs": "^0.27.6",
     "js-sha256": "^0.9.0",
     "minimist": "^1.2.0",
     "openpgp": "2.6.1",
